# py-active-windows-keyboard

./: .gitignore  .pdm-python  .pdm.toml  README.md  active_window.py  console_print.py  example.json  main.py  push_py_active_windows_keyboard.bat  pyproject.toml  send_hid.py  send_kmk.py
example/: example.json
