[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hxse", email = "narutohy@163.com"},
]
dependencies = [
    "hid>=1.0.5",
    "black>=22.12.0",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[[tool.pdm.source]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
verify_ssl = true
name = "pypi"
